Second version of index page

--- a/index.html
+++ b/index.html
@@ -53,17 +53,23 @@
 Module that makes json validation simple.
     </div>
 
-    <p>Features:
- * straightforward to write schemes
- * simple!
- * fast (though has no so-called "speed-ups")
- * doesn't have any third-party dependencies
- * has many unit-tests</p><h2>Dependencies</h2>
+    <h2>Features</h2>
+    <ul>
+        <li>straightforward to write schemes</li>
+        <li>simple</li>
+        <li>fast</li>
+        <li>no third-party dependencies</li>
+        <li>many unit-tests</li>
+    </ul>
+<h2>Dependencies</h2>
 <p>Python itself (tested on 2.5 and 2.6)</p>
 <h2>Install</h2>
-<p>pre. sudo python setup.py install</p>
+<pre>sudo python setup.py install</pre>
 <h2>License</h2>
-<p>DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE Version 2, 2004</p>
+<pre>           DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+  TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
+
+ 0. You just DO WHAT THE FUCK YOU WANT TO.</pre>
 <h2>Authors</h2>
 <p>Konstantin Merenkov (kmerenkov@gmail.com)</p>
 <h2>Contact</h2>
@@ -93,7 +99,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 </script>
 <script type="text/javascript">
 try {
-var pageTracker = _gat._getTracker("UA-2156912-2");
+var pageTracker = _gat._getTracker("UA-2156912-3");
 pageTracker._trackPageview();
 } catch(err) {}</script>
 </body>
